# centium

./: PKGBUILD  README.md  pyproject.toml
centium/: main.py  pacman_wrapper.py  suggest.py  suggest_data.py  update_report.py
centium.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
centium/aur/: installer.py  risk.py  updater.py
completions/: _centium.zsh  centium.bash  centium.fish
