[project]
name = "centium"
version = "0.1.0"
description = "A friendlier UX wrapper around pacman."
authors = [{ name = "Selby Mashiki" }]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
centium = "centium.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["centium*"]
