[project]
name = "centium"
version = "0.4.0"
description = "A minimal, preview-first pacman UX wrapper with AUR support"
authors = [{ name = "Selby Mashiki" }]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]
keywords = ["pacman", "arch", "aur", "package-manager", "cli"]

[project.scripts]
centium = "centium.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["centium*"]
